updated jumbotron wordings in html file and h1 style in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,16 +13,19 @@
 
 
 
+/* Jumbotron styling */
+
+.jumbotron h1 {
+    font-size: 50px;
+    font-weight: bold;
+    color:white;}
 
 
 
 
 
 
-
-
-
-/* Jumbotron  */
+/* Jumbotron image */
 .jumbotron {
     background-image: url(../images/camping.jpg);
     background-size: cover;
