--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,14 @@
 /* Adding styles to Navbar  */
 .navbar .navbar-brand {
-    color: #fff;
-    font-size: 40px;
-    padding-left: 20px;
+    color: wheat;
+    font-size: 50px;
+    padding-left: 10px;
     padding-right: 10px;
     margin-left: 0; 
+    font-family: 'Tangerine', serif;
+    text-shadow: 4px 4px 4px #aaa;
+
+
 }
 .navbar .navbar-nav  {
     margin: 0 0 0 auto;  
@@ -13,9 +17,12 @@
  .navbar .nav-item a{
      color: white !important;
      font-size: 28px;
+     text-shadow: 2px 2px 2px #aaa;
  }
 
-
+ .navbar .nav-item a:hover{
+    background-color: blue;
+}
 
 /* Jumbotron styling */
 
@@ -23,6 +30,7 @@
     font-size: 60px;
     font-weight: bold;
     color:white;
+    
 }
 
     .jumbotron p {
