--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,3 +52,21 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     flex-direction: column;
 }
+
+/* footer */
+
+footer {
+    margin: 0 auto;
+    height: 80px;
+    width: auto;
+    background-color: ;
+    margin-left: 20px;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    text-size-adjust: auto;
+}
+
+footer p {
+    color: ;
+}
