added margin top styling to submit in about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,12 @@
 .my-form{
         margin-top: -20px;
         background-color: #eee
-        
+      
 }
+
+.form-group{
+    margin-top: 20px;}
+    
 /* Submit button styling */
 .btn-primary{
     margin-bottom: 50px;
