--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,14 +60,45 @@
 
 /* footer */
 
-footer {
+.footer {
     margin: 0 auto;
     height: 200px;
     width: auto;
+    padding: 45px 0 20px;
     background-color: #aaa;
     color: #26272b;
+    font-size: 15px;
+    line-height: 24px;
     text-align: center;
     text-decoration: none;
     text-size-adjust: auto;
 }
+
+.footer hr { 
+    border-top-color: #eee;
+    opacity: 0.5;
+}
+
+.footer hr.small {
+    margin: 20px 0;
+}
+
+.footer h6 {
+    color: #26272b;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 2px;
+}
+
+.footer a {
+    color: #26272b;
+}
+
+.footer a:hover {
+    color: #3366cc;
+    text-decoration: none;
+}
+
+
 
