--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,93 @@ footer {
 
 }
 
-.card {
-    width: 300px;
+.footer .social_media-icons a {
+width: 40px;
+height: 40px;
+line-height: 40px;
+margin-left: 20px;
+margin-right: 0;
+border-radius: 100%;
+background-color: #aaa;
+}
+
+.copyright-text {
+    margin: 0;
+}
+
+@media (max-width: 991px) {
+    .footer [class^=col-]
+    {
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 767px) {
+    .footer 
+    {
+        padding-bottom: 0;
+    }
+    .footer .copyright-text, 
+    .footer .social_media-icons 
+    {
+    text-align: center;
+    }
+}
+
+.social_media-icons {
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.social_media-icons li {
+    display: inline-block;
+    margin-bottom: 8px;
+}
+
+.social_media-icons li.title {
+    margin-right: 15px;
+    text-transform: uppercase;
+    color: #96a2b2;
+    font-size: 13px;
+    font-weight: 700px;
+}
+
+.social_media-icons a {
+    background-color: #eceeef;
+    color: #26272b;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 44px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    margin-right: 8px;
+    border-radius: 100px;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+}
+
+.social_media-icons a:active,
+.social_media-icons a:focus,
+.social_media-icons a:hover {
+    color: #fff;
+    background-color: #818a91;
+}
+
+.social_media-icons.size-sm a {
+    line-height: 34px;
+    height: 34px;
+    width: 34px;
+    font-size: 14px;
+}
+
+@media (max-width: 797px) {
+    .social_media-icons li.title
+    {
+    display: block;
+    margin-right: 0;
+    font-weight: 600px;
+    }  
 }
