--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ background-color: #aaa;
 
 .social_media-icons a {
     background-color: #eceeef;
-    color: #818a91;
+    color: #26272b;
     font-size: 16px;
     display: inline-block;
     line-height: 44px;
