--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,10 @@ footer {
 .card {
     width: 300px;
 }
+
+.movie-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
