--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@
 
 .footer {
     margin: 0 auto;
-    height: 400px;
+    height: 200px;
     width: auto;
     padding: 45px 0 20px;
     background-color: #bbb;
@@ -105,6 +105,7 @@
     text-decoration: none;
     text-size-adjust: auto;
 }
+
 .footer .social_media-icons a {
 width: 40px;
 height: 40px;
@@ -116,13 +117,18 @@ background-color: #aaa;
 }
 
 .copyright-text {
-    margin: 0;
+    margin-left: 60px;
+    margin-top: 30px;
+    text-align: left;
+    
 }
 
 @media (max-width: 991px) {
     .footer [class^=col-]
     {
+        text-align: left;
         margin-bottom: 30px;
+        height: auto;
     }
 }
 
@@ -130,6 +136,7 @@ background-color: #aaa;
     .footer 
     {
         padding-bottom: 0;
+        height: auto;
     }
     .footer .copyright-text, 
     .footer .social_media-icons 
@@ -139,6 +146,7 @@ background-color: #aaa;
 }
 
 .social_media-icons {
+    margin-top: 25px;
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
