--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,9 +58,12 @@
 
 .abt {
     margin-top: -30px;
-    background-color: #eee
+    background-color: #eee;
+    padding: 10px;
 }
-
+.wkfun{
+    font-size: 24px;
+}
 .my-form {
     margin-top: -20px;
 }
