added transition and updated hover color and added link to contact section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,8 @@
 }
 
 .navbar .nav-item a:hover {
-    background-color: blue;
+    background-color:wheat;
+    transition: all 0.3s ease;
 }
 
 /* Jumbotron styling */
