--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,18 +93,19 @@
     flex-direction: row;
 }
 
-.movie-genres{
+.movie-genres {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 15px;
+    margin: 15px;
 }
 
 #movie-elements button {
     margin: 10px;
     padding: 15px;
     justify-content: center
-
 }
 
 .card {
