--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,11 @@
     .footer .social_media-icons {
         text-align: center;
     }
+
+    #maps-iframe {
+        width: 400px;
+        height: 350px;
+    }
 }
 
 .hr {
@@ -275,4 +280,8 @@
     outline: none;
     border-color: wheat;
     box-shadow: 0 0 0 0.3125rem rgba(199, 198, 198, 0.219);
+}
+
+#maps-iframe {
+    margin-top: 58px;
 }
