added image container to html and styled images in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,18 @@
     padding:10px;
     
 }
-
+/* image container styling */
+.images-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .image {
+    width: 400px;
+    height: 200px;
+    margin: 10px;
+  }
 /* About section styling */
 
 .abt {
