message form sending e-mails

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,8 +361,8 @@
     transition: 0.5s;
 }    
 
-button:hover,
-button:focus {
+.formBtn:hover,
+.formBtn:focus {
     outline:none;
     background: wheat;
 }
