added media queries to modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,27 +133,32 @@
     margin-top: 20px;
 }
 
-.modal {
+  .modal {
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
     position: fixed;
-    top:-15px;
+    top:-20px;
     left:-170px;
     z-index: 9999; 
+    display: flex;
+  justify-content: center;
+  align-items: center;
   }
   
   .modal-header {
     background-color: #758493;
     padding: 8px;
+    align-items: center;
+
   }
   
   .modal-header h2 {
     color: wheat;
     font-size: 24px;
     font-family: Arial, sans-serif;
-    margin-left: 180px;
+    margin-left: 195px;
     
   }
   
@@ -173,7 +178,7 @@
     color: #333;
     font-size: 18px;
     font-family: Arial, sans-serif;
-
+    margin-top: 15px;
   }
   
   .modal-footer {
@@ -189,10 +194,25 @@
     font-size: 18px;
     font-family: Arial, sans-serif;
     background-color: dodgerblue;
-
-
   }
+/* make the modal responsive by using media queries */ 
 
+@media (max-width: 576px) {
+    .modal-header h2 {
+     margin-left: 350px;
+    }
+}
+@media (max-width: 576px) {
+.modal-body p,button {
+    margin-top: 15px;
+    margin-left: 100px;
+  }}
+
+  @media (max-width: 576px) {
+    .modal-footer button {
+        margin-top: 10px;
+        margin-left: 100px;
+      }}
 /* Submit button styling */
 .btn-primary {
     margin-bottom: 50px;
